cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(pcl_examples)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcd_write_test pcd_write.cpp)
add_executable(pcd_read_test pcd_read.cpp)
add_executable(matrix_transform matrix_transform.cpp)
add_executable(pcd_clustering pcd_clustering.cpp)
add_executable(screws_pipeline screws_pipeline.cpp)
target_link_libraries(pcd_write_test ${PCL_LIBRARIES}) 
target_link_libraries(matrix_transform  ${PCL_LIBRARIES}) 
target_link_libraries(pcd_read_test  ${PCL_LIBRARIES}) 
target_link_libraries(pcd_clustering  ${PCL_LIBRARIES})
target_link_libraries(screws_pipeline  ${PCL_LIBRARIES})